--- a/checkout.css
+++ b/checkout.css
@@ -41,8 +41,14 @@ button {
     display: flex;
     justify-content: space-between;
     margin: 0 12rem;
+    gap: 100px
     /* position: relative;
     left: 1.2rem; */
+}
+
+.cartHeading h3{
+    flex: 1;
+    text-align: center;
 }
 
 .items {
